--- a/shared/tikz-src/activations/sigmoid.tex
+++ b/shared/tikz-src/activations/sigmoid.tex
@@ -7,7 +7,7 @@
     \datavisualization [scientific axes=clean,
                         all axes=grid,
                         x axis={unit length=0.8cm, label=$x$, ticks and grid={step=1}},
-                        y axis={unit length=2cm, min value=0, max value=1, ticks and grid={step=0.25},label=$\phi(x)$},
+                        y axis={unit length=2cm, min value=0, max value=1, ticks and grid={step=0.25},label=$\sigma(x)$},
                         visualize as line/.list=sigmoid,
                         sigmoid={style={red, line width=0.5mm}}]
     data [format=function, set=sigmoid] {
