--- a/shared/latex/supervised/random-forest.tex
+++ b/shared/latex/supervised/random-forest.tex
@@ -1,5 +1,4 @@
-\begin{frame}
-  \frametitle{Introduction}
+\begin{frame}{Introduction}
   \begin{itemize}
   \item les arbres de décision overfit facilement
   \item ils sont rapides à apprendre
@@ -8,14 +7,12 @@
   → création d'une forêt (ensemble d'arbres) aléatoire
 \end{frame}
 
-\begin{frame}
-  \frametitle{But}
+\begin{frame}{But}
   Produire des arbres décorrélés et moyenner leurs prédictions pour
   réduire la variance.
 \end{frame}
 
-\begin{frame}
-  \frametitle{Outil 1 — bagging (row sampling)}
+\begin{frame}{Outil 1 — bagging (row sampling)}
   \textbf{B}oostrap \textbf{agg}regat\textbf{ing} (Bagging) :
   \begin{itemize}
   \item tirer un échantillon du dataset avec replacement
@@ -25,8 +22,7 @@
   Le bagging s'appelle aussi row sampling.
 \end{frame}
 
-\begin{frame}
-  \frametitle{Outil 2 — random subspace method (column sampling)}
+\begin{frame}{Outil 2 — random subspace method (column sampling)}
   \begin{itemize}
   \item à chaque split, considérer seulement un sous-ensemble des
     features
@@ -39,21 +35,18 @@
   \end{itemize}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Random Forest}
+\begin{frame}{Random Forest}
   \V{["img/random-forest-full", "tw", 1.05] | image}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Random Forest}
+\begin{frame}{Random Forest}
   \begin{itemize}
   \item Pas de sur-apprentissage en augmentant le nombre d'arbres
   \item Une fois appris, le modèle est très rapide
   \end{itemize}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Conclusion}
+\begin{frame}{Conclusion}
   \begin{itemize}
   \item les arbres sont interprétables, rapides à entraîner,
     combinables.
