--- a/shared/latex/supervised/cost-error-function.tex
+++ b/shared/latex/supervised/cost-error-function.tex
@@ -20,7 +20,7 @@
 \begin{frame}{Choix usuel pour la régression}
   \begin{minipage}[l]{0.49\linewidth}
     \[
-      \hat{y} = ax+b
+      \hat{y_i} = \theta_0 + \theta_1 x_i
     \]
     \V{["img/regression-nzmog", "tw", 1] | image}
   \end{minipage}\hfill
