--- a/shared/latex/supervised/regression-lineaire.tex
+++ b/shared/latex/supervised/regression-lineaire.tex
@@ -1,9 +1,12 @@
 \begin{frame}{Définition du problème}
   Soit $\{(x_i, y_i)\}_{i \in \mathbb{R}}$ un ensemble de données tel que $\forall i, x_i \in \mathbb{R}$ et $y_i \in \mathbb{R}$ \\
 
-  Trouver $f: x_i \mapsto \hat{y_i}$ telle que $\hat{y_i} = ax + b$
+  Trouver $f: x_i \mapsto \hat{y_i}$ telle que $\hat{y_i} = \theta_0 + \theta_1 x_i$
 
-  On souhaite minimiser l'erreur commise~: $\sum_i \hat{y_i} - y_i \rightarrow 0$
+  On souhaite minimiser l'erreur commise~:
+  \[
+    \argmin_f \sum_i \hat{y_i} - y_i
+  \]
 \end{frame}
 
 \begin{frame}{Visualisation}
