change a et b en theta dans les images;delete partie math de naive bayes;maj evaluation

--- a/shared/latex/ml/evaluation.tex
+++ b/shared/latex/ml/evaluation.tex
@@ -6,6 +6,10 @@
   \end{itemize}
 \end{frame}
 
+\begin{frame}{Évaluation de modèles de régression}
+  erreur absolue moyenne ou erreur au carré moyenne.
+\end{frame}
+
 \begin{frame}{Évaluation de modèles de classification}
   Les deux premières métriques sont les plus utilisées:
   \begin{description}
@@ -47,8 +51,4 @@
 \begin{frame}{Matrice de confusion}
   Montrer clairement quelles sont les erreurs faites par le modèle
   \V{["img/confusion-matrix-nzmog", "th", 0.6] | image}
-\end{frame}
-
-\begin{frame}{Évaluation de modèles de régression}
-  Plus proche du critère d'apprentissage~: erreur absolue moyenne ou erreur au carré moyenne.
 \end{frame}
