Correction de coquilles

--- a/shared/latex/unsupervised/clustering/dbscan.tex
+++ b/shared/latex/unsupervised/clustering/dbscan.tex
@@ -15,7 +15,7 @@
   \begin{enumerate}
   \item Définir une distance $\epsilon$ et un nombre minimum de voisins $v$
   \item Prendre un point non-étiqueté au hasard et regarder son $\epsilon$-voisinage
-  \item Si il a $v$ voisins ou plus on crée un nouveau cluster
+  \item Si il y a $v$ voisins ou plus on crée un nouveau cluster
     \begin{enumerate}
     \item Expansion du cluster de proche en proche dans le voisinage
     \end{enumerate}
