--- a/shared/latex/unsupervised/dimensionality-reduction/pca-lda.tex
+++ b/shared/latex/unsupervised/dimensionality-reduction/pca-lda.tex
@@ -70,7 +70,7 @@
   \end{itemize}
 \end{frame}
 
-\begin{frame}{PCA --- Linear Discriminant Analysis}
+\begin{frame}{LDA --- Linear Discriminant Analysis}
   Procédé : \\
   \begin{itemize}
     \item Estimation de la matrice de covariance de chaque classe
@@ -79,7 +79,7 @@
   \end{itemize}
 \end{frame}
 
-\begin{frame}{PCA --- Linear Discriminant Analysis}
+\begin{frame}{LDA --- Linear Discriminant Analysis}
   Attention, technique délicate qui est sensible à : \\
   \begin{itemize}
     \item Forte dimensionnalité
