--- a/shared/latex/unsupervised/dimensionality-reduction/pca-variantes.tex
+++ b/shared/latex/unsupervised/dimensionality-reduction/pca-variantes.tex
@@ -8,5 +8,5 @@
 
 \begin{frame}
   \frametitle{Analyse Factorielle pour données mixtes (AFDM)}
-  Quand on a des variables qualitative ET quantitatives pour décrires nos échantillons, on discrétise chaque variable quantitative. On peut ainsi procéder à l'Analyse en Composantes Multiples
+  Quand on a des variables qualitatives ET quantitatives pour décrires nos échantillons, on discrétise chaque variable quantitative. On peut ainsi procéder à l'Analyse en Composantes Multiples
 \end{frame}
