--- a/shared/latex/nn/optimize.tex
+++ b/shared/latex/nn/optimize.tex
@@ -41,7 +41,7 @@
 
 \begin{frame}{Taille du batch}
   Usuellement, des puissances de 2, pour optimiser les ressources GPU
-  \V{["img/batch-size-effect-nzmog", "th", 0.7] | image}
+  \V{["img/batch-size-effect-nzmog", "tw", 0.8] | image}
 \end{frame}
 
 \begin{frame}{Taille des couches}
