--- a/shared/latex/nn/optimize.tex
+++ b/shared/latex/nn/optimize.tex
@@ -17,7 +17,7 @@
 \begin{frame}{Approche pour optimiser les hyper-paramètres}
   \begin{itemize}[<+->]
     \item Commencer avec une bonne baseline et une rapide recherche \frquote{à la main}
-    \item When you are done with the basic pipeline, implement a proper search using a dedicated library
+    \item Quand toute la pipeline est fonctionnelle, implémenter la recherche en utilisation une librairie spécialisée
   \end{itemize}
 \end{frame}
 
