--- a/shared/latex/nn/regularisation.tex
+++ b/shared/latex/nn/regularisation.tex
@@ -30,5 +30,5 @@
 \end{frame}
 
 \begin{frame}{En opposant des réseaux de neurones}
-  \V{["img/gan-schema", "tw", 0.8] | image}
+  \V{["tikz/neural-networks/gan/gan", "tw", 0.8] | image}
 \end{frame}
