--- a/shared/tikz-src/neural-networks/model-en.tex
+++ b/shared/tikz-src/neural-networks/model-en.tex
@@ -4,7 +4,7 @@
 
 \begin{document}
   \begin{tikzpicture}
-    \node[output,circle] (O) at (4 , 3) {$\sigma(\sum{w_i . x_i} + b)$};
+    \node[output,circle] (O) at (4 , 3) {$\sigma\left(\sum{\left[\theta_i x_i\right]} + \theta_0\right)$};
     \node[input] (S) at (7 , 3) {Y};
     \node[input] (X) at (-3, 3) {X};
     \node(I) at (-1.8, 3) {};
@@ -14,10 +14,10 @@
     \node[input] (I4) at (0, 0) {$x_4$};
     \node (T) at (2, -1) {where $\sigma$ is a function emulating a threshold activation};
     \draw[->,>=stealth] (O) to (S);
-    \path[->,>=stealth] (I1) edge [bend  left=20] node [pos=0.45,label distance=1.5,below] {$w_1$} (O);
-    \path[->,>=stealth] (I2) edge [bend  left=20] node [pos=0.45,label distance=1.5,below] {$w_2$} (O);
-    \path[->,>=stealth] (I3) edge [bend right=20] node [pos=0.45,label distance=1.5,above] {$w_3$} (O);
-    \path[->,>=stealth] (I4) edge [bend right=20] node [pos=0.45,label distance=1.5,above] {$w_4$} (O);
+    \path[->,>=stealth] (I1) edge [bend  left=20] node [pos=0.45,label distance=1.5,below] {$\theta_1$} (O);
+    \path[->,>=stealth] (I2) edge [bend  left=20] node [pos=0.45,label distance=1.5,below] {$\theta_2$} (O);
+    \path[->,>=stealth] (I3) edge [bend right=20] node [pos=0.45,label distance=1.5,above] {$\theta_3$} (O);
+    \path[->,>=stealth] (I4) edge [bend right=20] node [pos=0.45,label distance=1.5,above] {$\theta_4$} (O);
     \draw[dashed,-] (X) |- (I.center);
     \draw[dashed,-] (I.center) |- (I1);
     \draw[dashed,-] (I.center) |- (I2);
