add manim visualisation for PCA and LDA as youtube links

--- a/shared/latex/unsupervised/dimensionality-reduction/pca-lda.tex
+++ b/shared/latex/unsupervised/dimensionality-reduction/pca-lda.tex
@@ -68,6 +68,7 @@
     \item Tri des vecteurs par valeur propre décroissante
     \item Réduction de dimension : on ne conserve que les $k$ premiers vecteurs propres
   \end{itemize}
+  \bluelink{https://www.youtube.com/watch?v=FLbb_lyMWAY}{Illustration PCA}
 \end{frame}
 
 \begin{frame}{LDA --- Linear Discriminant Analysis}
@@ -77,6 +78,7 @@
     \item ACP sur chacune de ces matrices
     \item Projection en maximisant la variance inter-classes
   \end{itemize}
+  \bluelink{https://www.youtube.com/watch?v=mRPFN1IGnDY}{Illustration LDA}
 \end{frame}
 
 \begin{frame}{LDA --- Linear Discriminant Analysis}
