--- a/shared/latex/unsupervised/dimensionality-reduction/pca-variantes.tex
+++ b/shared/latex/unsupervised/dimensionality-reduction/pca-variantes.tex
@@ -1,12 +1,147 @@
+\begin{frame}
+  \frametitle{Analyse des correspondances}
+  \begin{itemize}
+    \item Similaires à l'ACP dans la mise en \oe uvre,
+    \item mais se focalisent sur l'analyse de relations entre les caractéristiques des données.
+  \end{itemize}
+
+  Fréquemment utilisées dans les données de sondages (INSEE, enquêtes d'opinions).
+\end{frame}
+
+\begin{frame}
+  \frametitle{Analyse Factorielle des Correspondances (AFC)}
+  \begin{center}
+    L'AFC s'applique sur des données croisées.\\Une ligne \textbf{ne représente pas} un individu. 
+  \end{center}
+  
+  \begin{minipage}{0.45\linewidth}
+    \V{["tikz/dimensionality-reduction/afc", "tw", 1.0] | image}
+  \end{minipage}
+  \hfill
+  \begin{minipage}{0.49\linewidth}
+    $X_{ij}$ correspond au nombre d'individus qui possède la caractéristique $i$ de la \textcolor{blue}{variable A} et la caractéristique $j$ de la \textcolor{red}{variable B}.
+  \end{minipage}
+\end{frame}
+
+\begin{frame}
+  \frametitle{AFC --  Exemple de données}
+  \begin{scriptsize}
+    \begin{table}
+      \begin{tabular}{llcccccc}
+        \toprule
+        &&\multicolumn{4}{c}{Attachment Classification Mother}\\
+        \cline{3-7}
+        \multicolumn{2}{l}{Infant} & Ds & F & E & U &Row&\\
+        \multicolumn{2}{l}{Classification} & Dismissing & Autonomous & Preoccupied & Unresolved & Margin &$p_{i.}$\\
+        \midrule
+        A & Avoidant     & 62 &  29 & 14 & 11 & 116& .212\\
+        B & Secure       & 24 & 210 & 14 & 39 & 287& .524\\
+        C & Resistant    &  3 &   9 & 10 &  6 &  28& .051\\
+        D & Disorganised & 19 &  26 & 10 & 62 & 117& .214\\
+        &&&&&&&\\
+        \multicolumn{2}{l}{Column Margin} & 108 & 274 & 48 & 118 & 548 &\\
+        \midrule
+        $p_{.j}$& & .197 & .500 & .088 & .215 & & 1.000\\
+        \bottomrule
+      \end{tabular}
+      \caption{Transmission de l'attachement(1995) ; Van  IJzendoorn ;Kroonenberg, P. M., \& Lombardo, R. }
+    \end{table}
+  \end{scriptsize}
+\end{frame}
+
+\begin{frame}
+  \frametitle{AFC -- Probabilités}
+  \begin{minipage}{0.45\linewidth}
+    \V{["tikz/dimensionality-reduction/afc-proba", "tw", 1.0] | image}
+  \end{minipage}
+  \hfill
+  \begin{minipage}{0.49\linewidth}
+    Pour les calculs de l'AFC, les données sont représentées par de probabilités avec :
+    \begin{equation*}
+      p_{ij}=\frac{X_{ij}}{n} 
+    \end{equation*}
+    avec $n$ la somme des valeurs.
+  \end{minipage}
+\end{frame}
+
+\begin{frame}
+  \frametitle{AFC -- Profils ligne et colonnes}
+  \begin{minipage}{0.45\linewidth}
+    \V{["tikz/dimensionality-reduction/afc-profil-ligne", "tw", 1.0] | image}
+  \end{minipage}
+  \hfill
+  \begin{minipage}{0.45\linewidth}
+    \V{["tikz/dimensionality-reduction/afc-profil-colonne", "tw", 1.0] | image}
+  \end{minipage}
+
+  À partir de la table de probabilité, on calcule le profil ligne et colonne, c'est à dire les probabilités conditionnelles par ligne et par colonne.
+\end{frame}
+
+\begin{frame}
+  \frametitle{AFC -- Axes d'inertie maximale}
+  Sur chacun des deux profils, on applique une réduction de dimension (comme pour la PCA) sur la matrice des distances $\chi^2$ de chacun point dans chaque profil à leur barycentre respectif.
+
+  Exemple sur la variable $A$ / Profil ligne :
+  \begin{equation*}
+    d_{\chi^2}^2(i,G_i) = \sum^J_{j=1}\frac{1}{p_j}\left(\frac{p_{ij}}{p_i} - p_j \right)^2 
+  \end{equation*}
+  avec $G_i$ le barycentre du profil ligne.
+
+  La somme des distances des points pondéré par leur probabilité (\emph{Inertie}) est égale au $\phi^2$ qui mesure l'écart à l'indépendance entre les variables.
+\end{frame}
+
+\begin{frame}
+  \frametitle{AFC -- Visualisation}
+  \begin{minipage}{0.59\linewidth}
+    \V{["img/afc-g8-agreements", "tw", 1] | image}
+  \end{minipage}
+  \begin{minipage}{0.4\linewidth}
+    En projetant et en centrant les barycentres sur un graphe, il est possible d'observer graphiquement les co-dépendances entre caractéristiques.
+  \end{minipage}
+\end{frame}
 
 \begin{frame}
   \frametitle{Analyse des Correspondances Multiples (ACM)}
-  ACP sur des données qualitatives (Ex : enquètes d'opinions avec QCM) \\
-  Chaque variable qualitative est transformé en vecteur sparse. \\
-  On obtient une matrice binaire sur laquelle on procède à l'ACP.\\
+  Pour l'ACM, données par individus et colonnes des caractéristiques type questions à choix multiples.
+  \begin{center}
+    \V{["tikz/dimensionality-reduction/acm", "tw", 0.6] | image}
+  \end{center}
+  Le tableau est ensuite transformé en tableau disjonctif complet (TDC) (aka one hot encoding).
+\end{frame}
+
+\begin{frame}
+  \frametitle{ACM -- Calcul des distances}
+
+  Comme pour AFC, remplacement des valeurs $x_{ik}$ par une pondération dépendantes de la probabilités des caractéristiques :
+  \begin{equation*}
+    x'_{ik}=\frac{x_{ik}}{p_k}
+  \end{equation*}
+
+  À partir des ces valeurs, on considère la distance entre deux individus $i$ et $i'$:
+  \begin{equation*}
+    d_{i,i'}^2=\frac{1}{J}\sum^K_{k=1} \frac{1}{p_k}(x'_{ik}-x'_{i'k})^2
+  \end{equation*}
+
+  \begin{itemize}
+    \item Beaucoup de réponses similaires $\Leftrightarrow$ distance faible
+    \item Un des individu a une réponse inhabituelle $\Leftrightarrow$ distance élevé
+    \item Deux individus ont une réponse inhabituelle commune $\Leftrightarrow$ distance faible
+  \end{itemize}
+\end{frame}
+
+\begin{frame}
+  \frametitle{ACM -- Projection}
+  \begin{itemize}
+    \item Projection par réduction de dimension avec une recherche de vecteurs propres. 
+    \item Au lieu de projeter tous les individus, projection des barycentres des groupes d'individus par caractéristiques possédées. 
+    \item Utilisation des caractéristiques secondaires pour aider l'interprétation.
+  \end{itemize}
+  
+  
+
 \end{frame}
 
 \begin{frame}
   \frametitle{Analyse Factorielle pour données mixtes (AFDM)}
-  Quand on a des variables qualitatives ET quantitatives pour décrires nos échantillons, on discrétise chaque variable quantitative. On peut ainsi procéder à l'Analyse en Composantes Multiples
+  Quand on a des variables qualitatives ET quantitatives pour décrire nos échantillons, on discrétise chaque variable quantitative. On peut ainsi procéder à l'Analyse en Composantes Multiples
 \end{frame}
