--- a/shared/latex/unsupervised/dimensionality-reduction/pca-variantes.tex
+++ b/shared/latex/unsupervised/dimensionality-reduction/pca-variantes.tex
@@ -56,7 +56,7 @@
   \end{minipage}
   \hfill
   \begin{minipage}{0.49\linewidth}
-    Pour les calculs de l'AFC, les données sont représentées par de probabilités avec :
+    Pour les calculs de l'AFC, les données sont représentées par des probabilités avec :
     \begin{equation*}
       p_{ij}=\frac{X_{ij}}{n} 
     \end{equation*}
