Add demos for DRN and some minor clean-up
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/shared/latex/nn/tp-demo-keras.tex
+++ b/shared/latex/nn/tp-demo-keras.tex
@@ -1,5 +1,6 @@
 \begin{frame}{Démonstration}
   \begin{center}
-    \bluelink{https://colab.research.google.com/drive/1Eslst_uJnqijNVNSR654RzEHet7Lcrr_\#forceEdit=true&sandboxMode=true}{Réseaux de neurones avec Keras}
+    \bluelink{https://colab.research.google.com/drive/1Ogff7RfgbeIJj4nivteEfYV7COipETUG\#forceEdit=true&sandboxMode=true}{Réseau de neurones simple avec Keras}
+    (\bluelink{https://colab.research.google.com/drive/1Eslst_uJnqijNVNSR654RzEHet7Lcrr_\#forceEdit=true&sandboxMode=true}{version TP})
   \end{center}
 \end{frame}
