--- a/shared/latex/supervised/demo-linear-regression.tex
+++ b/shared/latex/supervised/demo-linear-regression.tex
@@ -1,5 +1,6 @@
 \begin{frame}{Démonstration}
   \begin{center}
-    \bluelink{https://colab.research.google.com/drive/1CAkh09NmO-smYF9h3C5AA_69CZ9d7sTq\#forceEdit=true&sandboxMode=true}{Regression linéaire}
+    \bluelink{https://colab.research.google.com/drive/1vNdPJLp_pYdIfg1Vd-Jopr8v7RPu2YlF\#forceEdit=true&sandboxMode=true}{Regression linéaire}
+    (\bluelink{https://colab.research.google.com/drive/1CAkh09NmO-smYF9h3C5AA_69CZ9d7sTq\#forceEdit=true&sandboxMode=true}{version TP})
   \end{center}
 \end{frame}
