--- a/shared/latex/nn/cnn/tp-demo.tex
+++ b/shared/latex/nn/cnn/tp-demo.tex
@@ -1,7 +1,6 @@
 \begin{frame}{Démonstration}
   \begin{center}
-    \begin{itemize}
-      \item \bluelink{https://colab.research.google.com/drive/1xLFNAWBJxmp0GBcRhmwKfZUbewBDq4hz\#forceEdit=true&sandboxMode=true}{CNN avec Keras}
-    \end{itemize}
+    \bluelink{https://colab.research.google.com/drive/141PkJIc59QuaLTVar1LKQJklmyVZFHNZ\#forceEdit=true&sandboxMode=true}{CNNs avec Keras sur des données de paysage}
+    (\bluelink{https://colab.research.google.com/drive/1xLFNAWBJxmp0GBcRhmwKfZUbewBDq4hz\#forceEdit=true&sandboxMode=true}{version TP})
   \end{center}
 \end{frame}
