--- a/shared/latex/ai/history.tex
+++ b/shared/latex/ai/history.tex
@@ -2,8 +2,7 @@
   \V{["img/mythe-du-golem", "tw", 1] | image}
 \end{frame}
 
-\begin{frame}{Début du XX\ieme{} siècle --- Chaînes de Markov}
-  \textbf{1913} : Chaînes de Markov
+\begin{frame}{1913 --- Chaînes de Markov}
   \V{["tikz/markov/simple", "th", 0.8] | image}
 \end{frame}
 
@@ -57,8 +56,6 @@
 \end{frame}
 
 
-\begin{frame}
-  \frametitle{Du mythe à aujourd'hui}
-  \textbf{2019} : AlphaStar est dans le top 0.2\% des joueurs de Starcraft 2
+\begin{frame}{2019 --- AlphaStar, top 0.2\% des joueurs de StarCraft II}
   \V{["img/deepmind-starcraft-2", "tw", 0.6] | image}
 \end{frame}
