--- a/shared/latex/ml/intro.tex
+++ b/shared/latex/ml/intro.tex
@@ -7,10 +7,10 @@
 \end{frame}
 
 \begin{frame}{Machine Learning}
-  Nouvelle manière d'aborder la \textbf{conception logicielle}.
+  Nouvelle manière d'aborder la conception logicielle.
   \vfill
   \begin{block}{Changement de paradigme}
-  Programmation Explicite $\rightarrow$ Programmation Implicite
+  Programmation explicite $\rightarrow$ programmation implicite
   \end{block}
 \end{frame}
 
@@ -33,23 +33,23 @@
 
 \begin{frame}{Grandes familles}
 
-  Apprentissage \textbf{supervisé} ou \textbf{non-supervisé}, voire \textbf{par renforcement} ?
-\end{frame}
-
-\begin{frame}{Apprentissage non-supervisé}
-  Faire émerger des profils, des groupes
-  \vfill
-  \begin{exampleblock}{Exemple}
-  groupes de clients pour adapter sa stratégie marketing
-  \end{exampleblock}
+  Apprentissage supervisé, non-supervisé, par renforcement, …
 \end{frame}
 
 \begin{frame}{Apprentissage supervisé}
-  \textbf{Prédire} une valeur numérique (\textbf{régression}) ou l'appartenance à une classe (\textbf{Classification}).
+  \textbf{Prédire} une valeur numérique (régression) ou l'appartenance à une classe (classification).
+\end{frame}
+
+\begin{frame}{Apprentissage non-supervisé}
+  Faire émerger des profils, des groupes.
+  \vfill
+  \begin{exampleblock}{Exemple}
+    Groupes de clients pour adapter sa stratégie marketing
+  \end{exampleblock}
 \end{frame}
 
 \begin{frame}{Apprentissage par Renforcement}
-  Apprendre une \textbf{stratégie} efficace dans un \textbf{univers} où les \textbf{actions} fournissent des \textbf{récompenses} (possiblement négatives)
+  Apprendre une stratégie efficace dans un univers où les actions fournissent des récompenses (possiblement négatives).
   \vfill
   \begin{minipage}[l]{0.39\linewidth}
     \V{["img/echec", "tw", 0.8] | image}
@@ -60,13 +60,13 @@
 \end{frame}
 
 \begin{frame}{Exemple --- Régression linéaire}
-  Prédire une valeur en fonction d'une autre
+  Prédire une valeur en fonction d'une autre.
 
   \V{["img/regression-nzmog", "th", 0.65] | image}
 \end{frame}
 
 \begin{frame}{Exemple --- Régression linéaire multiple}
-  Prédire une valeur en fonction de plusieurs autres
+  Prédire une valeur en fonction de plusieurs autres.
 
   \V{["img/regression-hyperplan-nzmog", "th", 0.65] | image}
 \end{frame}
@@ -88,16 +88,16 @@
 \end{frame}
 
 \begin{frame}{Points de vue}
-  Beaucoup de façons de voir le machine learning. Basées sur :
+  Beaucoup de façons de voir le machine learning. Basées sur~:
   \begin{itemize}[<+->]
-  \item les paradigmes (supervisé, non supervisé, renforcement, en
-    ligne, …)
-  \item les modèles (arbres, grammaires, automates, réseaux de
-    neurones …)
-  \item les données (tabulaire, image, texte, vidéo, graphe, …)
-  \item les techniques (statistiques, symboliques, probabilistes, …)
-  \item les contraintes (real time, embarqué, big data, multilingue,
-    …)
+    \item les paradigmes (supervisé, non supervisé, renforcement, en
+      ligne, …)
+    \item les modèles (arbres, grammaires, automates, réseaux de
+      neurones …)
+    \item les données (tabulaire, image, texte, vidéo, graphe, …)
+    \item les techniques (statistiques, symboliques, probabilistes, …)
+    \item les contraintes (real time, embarqué, big data, multilingue,
+      …)
   \end{itemize}
 
   \onslide<+->{→ Domaine \textbf{extrêmement} vaste.}
