--- a/shared/latex/nn/regularisation.tex
+++ b/shared/latex/nn/regularisation.tex
@@ -7,7 +7,7 @@
   Coût supplémentaire pour l'utilisation des paramètres dans la fonction de perte~:
 
   \[
-  \text{perte} = \text{perte} + \lambda\sum||\vect{\theta}||^2
+    E = E + \lambda\sum||\vect{\theta}||^2
   \]
 
   où $\lambda$ est un hyperparamètre
