--- a/shared/latex/tf-keras/tf.tex
+++ b/shared/latex/tf-keras/tf.tex
@@ -10,7 +10,7 @@
 \begin{frame}{Deux styles}
   Mode graphe~: on définit un graphe de calcul qu'on exécute ensuite.
 
-  Mode «~eager~»: on définit des fonctions python qui opèrent directement sur des valeurs.
+  Mode \textit{eager}~: on définit des fonctions python qui opèrent directement sur des valeurs.
 \end{frame}
 
 \begin{frame}{TensorFlow 1 vs TensorFlow 2}
