--- a/shared/latex/nn/rnn/model.tex
+++ b/shared/latex/nn/rnn/model.tex
@@ -40,7 +40,7 @@
   \end{figure}
 \end{frame}
 
-\begin{frame}{Prédiction d'autants de sorties qu'il y a d'entrées}
+\begin{frame}{Prédiction d'autant de sorties qu'il y a d'entrées}
   \V{["tikz/neural-networks/rnn/alloutputs", "tw", 0.5] | image}
 \end{frame}
 
