--- a/shared/latex/nn/cnn/model.tex
+++ b/shared/latex/nn/cnn/model.tex
@@ -42,12 +42,12 @@
   Ici, on est passé de $5 \times 5$ à $2 \times 2$ grâce aux pas de convolution $(3, 2)$.
 \end{frame}
 
-\begin{frame}{Aggrégation}
+\begin{frame}{Agrégation}
   \textit{Pooling} en anglais. L'autre mécanisme pour réduire les dimensions spatiales~:
 
   \V{["tikz/neural-networks/cnn/maxpool", "tw", 0.8] | image}
 
-  Une aggrégation $n \times m$ est souvent utilisée avec des pas $(n, m)$.
+  Une agrégation $n \times m$ est souvent utilisée avec des pas $(n, m)$.
 \end{frame}
 
 \begin{frame}{Combinaison des blocs de base en un réseau convolutif}
