Add Ray to the big data tools
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/shared/latex/tools/big-data.tex
+++ b/shared/latex/tools/big-data.tex
@@ -36,6 +36,7 @@
   \begin{itemize}[<+->]
     \item Apache Spark (+ MLlib)
     \item Dask (+ Dask-ML)
+    \item Ray (+ Ray Tune, + Ray SGD, + RLLib)
     \item Apache Hadoop (récemment de plus en plus délaissé pour Spark)
   \end{itemize}  
 
